# mlx-kld

./: .gitignore  README.md  compare.py  pyproject.toml  reference.py  requirements.txt
.github/workflows/: test.yml
charts/: Qwen3.6-35B-A3B.ipynb  README.md
mlx_eval/: compare.py  const.py  reference.py
mlx_kld/: compare.py  const.py  reference.py
results/: Qwen3.6-27B.py  Qwen3.6-35B-A3B.ipynb  Qwen3.6-35B-A3B.py  README.md
tests/: compare_test.py  reference_test.py  utils.py
