[project]
name = "mlx-kld"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "plotly>=6.7.0",
]
[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.setuptools]
packages = ["mlx_kld"]

[project.scripts]
"mlx_kld.reference" = "mlx_kld.reference:main"
"mlx_kld.compare" = "mlx_kld.compare:main"

[tool.uv]
package = true
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    # flake8-quotes
    "Q",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
exclude = [
    ".venv",
    ".vscode",
    ".git",
]
