[project]
name = "mlx-kld"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "plotly>=6.7.0",
]
[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.setuptools]
packages = ["mlx_kld"]

[project.scripts]
"mlx_kld.reference" = "mlx_kld.reference:main"
"mlx_kld.compare" = "mlx_kld.compare:main"

[tool.uv]
package = true
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py312"
unsafe-fixes = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    # flake8-quotes
    "Q",
    # pycodestyle
    "E",
    # pycodestyle
    "W",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-logging-format
    "G",
    # isort
    "I",
    # pep8-naming
    "N",
    # ruff
    "RUF",
    # flake8-unused-arguments
    "ARG",
    # flake8-simplify
    "SIM",
    # flake8-pyi
    "PYI",
    # flake8-pie
    "PIE",
    # flake8-return
    "RET",
    # flake8-import-conventions
    "ICN",
    # flake8-commas
    "COM",
    # flake8-use-pathlib
    # "PTH",
    # flake8-commas
    "C4",
    # Perflint
    "PERF",
    # Pylint
    "PL",
    # Warning
    "PLW",
    # pyupgrade
    "UP",
    # refurb
    "FURB"
]
ignore = ["PLR2004"]
exclude = [
    ".venv",
    ".vscode",
    ".git",
]
