[project]
name = "mlx-eval"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "plotly>=6.7.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.setuptools]
packages = ["mlx_eval"]

[project.scripts]
"mlx_eval.reference" = "mlx_eval.reference:main"
"mlx_eval.compare" = "mlx_eval.compare:main"

[tool.uv]
package = true
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py312"
unsafe-fixes = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    # flake8-quotes
    "Q",
    # pycodestyle
    "E",
    # pycodestyle
    "W",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-logging-format
    "G",
    # isort
    "I",
    # pep8-naming
    "N",
    # ruff
    "RUF",
    # flake8-unused-arguments
    "ARG",
    # flake8-simplify
    "SIM",
    # flake8-pyi
    "PYI",
    # flake8-pie
    "PIE",
    # flake8-return
    "RET",
    # flake8-import-conventions
    "ICN",
    # flake8-commas
    "COM",
    # flake8-use-pathlib
    # "PTH",
    # flake8-commas
    "C4",
    # Perflint
    "PERF",
    # Pylint
    "PL",
    # Warning
    "PLW",
    # pyupgrade
    "UP",
    # refurb
    "FURB"
]
ignore = [
  # magic-value-comparison
  "PLR2004",
  # flake8-import-conventions
  "ICN001",
  # too-many-arguments
  "PLR0913"
]
unfixable = [
  # unused-import
  "F401",
  # unused-variable
  "F841",
]
exclude = [
    ".venv",
    ".vscode",
    ".git",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
